syntax = "proto3";

package com.epam.grpctask.entity;

option java_package = "com.epam.grpctask.entity";
option java_multiple_files = true;

service MessageService{
  rpc getMessage(MessageRequest) returns (MessageResponse);
}

message MessageRequest{
  string message = 1;
}

message MessageResponse{
  string message = 1;
}